[gd_scene load_steps=5 format=3 uid="uid://dr31luvmx7fd7"]

[ext_resource type="Texture2D" uid="uid://j4bqhghyned" path="res://Assets/menu art/wp3486579-plain-blue-screen-wallpaper-1920x1080.jpg" id="1_b42sw"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_bmkaf"]
[ext_resource type="FontFile" uid="uid://1irtet74uufh" path="res://Assets/UI/AncientModernTales-a7Po.ttf" id="3_f3pvt"]
[ext_resource type="PackedScene" uid="uid://bnekpfme3n8a4" path="res://scenes/options_menu.tscn" id="4_kbrh2"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bmkaf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -767.0
offset_top = -560.0
offset_right = 641.0
offset_bottom = 392.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_b42sw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("3_f3pvt")
theme_override_font_sizes/font_size = 64
text = "SWORD HUNT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Start_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_f3pvt")
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="Load_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_f3pvt")
theme_override_font_sizes/font_size = 24
text = "Load Game"

[node name="Options_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_f3pvt")
theme_override_font_sizes/font_size = 24
text = "Options"

[node name="Exit_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_f3pvt")
theme_override_font_sizes/font_size = 24
text = "Exit Game"

[node name="Options_Menu" parent="." instance=ExtResource("4_kbrh2")]
visible = false
layout_mode = 1
